force-app/main/default/objects/Vehicle__c/fields/Carry_Weight__c.field-meta.xml
<CustomField>
    <fullName>Carry_Weight__c</fullName>
    <label>Carry Weight (KG)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>