force-app/main/default/objects/Vehicle__c/fields/Chas__c.field-meta.xml
<CustomField>
    <fullName>Chas__c</fullName>
    <label>Chassis</label>
    <length>40</length>
    <type>Text</type>
</CustomField>