force-app/main/default/objects/Vehicle__c/fields/Depot__c.field-meta.xml
<CustomField>
    <fullName>Depot__c</fullName>
    <label>Depot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minerva Road</fullName>
            </value>
            <value>
                <fullName>Camley Street</fullName>
            </value>
            <value>
                <fullName>Harriet Walk</fullName>
            </value>
            <value>
                <fullName>Hoxton</fullName>
            </value>
            <value>
                <fullName>Lambeth</fullName>
            </value>
            <value>
                <fullName>Birmingham S&amp;D</fullName>
            </value>
            <value>
                <fullName>Redbridge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>