force-app/main/default/objects/Vehicle__c/fields/Divider__c.field-meta.xml
<CustomField>
    <fullName>Divider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Divider</label>
    <type>Checkbox</type>
</CustomField>