force-app/main/default/objects/Vehicle__c/fields/Driver_Name__c.field-meta.xml
<CustomField>
    <fullName>Driver_Name__c</fullName>
    <label>Vehicle Code</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>