force-app/main/default/objects/Vehicle__c/fields/EndServiceDate__c.field-meta.xml
<CustomField>
    <fullName>EndServiceDate__c</fullName>
    <label>EndServiceDate</label>
    <type>Date</type>
</CustomField>