force-app/main/default/objects/Vehicle__c/fields/Fob_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Fob_Serial_Number__c</fullName>
    <description>Fob Serial Number</description>
    <label>Fob_Serial_Number</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>