force-app/main/default/objects/Vehicle__c/fields/Food_POC__c.field-meta.xml
<CustomField>
    <fullName>Food_POC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Food POC</label>
    <type>Checkbox</type>
</CustomField>