force-app/main/default/objects/Vehicle__c/fields/Garage__c.field-meta.xml
<CustomField>
    <fullName>Garage__c</fullName>
    <label>Garage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Double4</fullName>
            </value>
            <value>
                <fullName>Dustsweep Repairs</fullName>
            </value>
            <value>
                <fullName>Endurance Vehicle Solutions</fullName>
            </value>
            <value>
                <fullName>HTC Park Royal</fullName>
            </value>
            <value>
                <fullName>Motus Trucks &amp; Vans</fullName>
            </value>
            <value>
                <fullName>NRG Riverside</fullName>
            </value>
            <value>
                <fullName>NTM-GB Ltd</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>PR Fleet</fullName>
            </value>
            <value>
                <fullName>Q Metals</fullName>
            </value>
            <value>
                <fullName>RVS</fullName>
            </value>
            <value>
                <fullName>Rygor Truck center</fullName>
            </value>
            <value>
                <fullName>UPK RMB</fullName>
            </value>
            <value>
                <fullName>Wilsway Motors</fullName>
            </value>
            <value>
                <fullName>YARD OFF ROAD AWAITING ENGINEER</fullName>
            </value>
            <value>
                <fullName>YARD OFF ROAD LONG TERM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>