force-app/main/default/objects/Vehicle__c/fields/Inuse__c.field-meta.xml
<CustomField>
    <fullName>Inuse__c</fullName>
    <label>Off Road</label>
    <length>1</length>
    <type>Text</type>
</CustomField>