force-app/main/default/objects/Vehicle__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <description>An indication of what is wrong with the vehicle</description>
    <label>Issue</label>
    <type>TextArea</type>
</CustomField>