force-app/main/default/objects/Vehicle__c/fields/Key_Pin__c.field-meta.xml
<CustomField>
    <fullName>Key_Pin__c</fullName>
    <label>Key Pin</label>
    <length>20</length>
    <type>Text</type>
</CustomField>