force-app/main/default/objects/Vehicle__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes relating to vehicle issues</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>