force-app/main/default/objects/Vehicle__c/fields/StartServiceDate__c.field-meta.xml
<CustomField>
    <fullName>StartServiceDate__c</fullName>
    <label>StartServiceDate</label>
    <type>Date</type>
</CustomField>