force-app/main/default/objects/Vehicle__c/fields/Tare_Weight__c.field-meta.xml
<CustomField>
    <fullName>Tare_Weight__c</fullName>
    <formula>GrossWeight__c-Carry_Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tare Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>