force-app/main/default/objects/Vehicle__c/fields/Used_Today__c.field-meta.xml
<CustomField>
    <fullName>Used_Today__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used Today?</label>
    <type>Checkbox</type>
</CustomField>