force-app/main/default/objects/Vehicle__c/fields/VehicleNo__c.field-meta.xml
<CustomField>
    <fullName>VehicleNo__c</fullName>
    <externalId>true</externalId>
    <label>VehicleNo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>