force-app/main/default/objects/Vehicle__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <label>Volume M3 incl Compaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>