force-app/main/default/objects/Vehicle__c/listViews/Active_Vehicles.listView-meta.xml
<ListView>
    <fullName>Active_Vehicles</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Active Vehicles</label>
</ListView>