force-app/main/default/objects/Vehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Depot__c</columns>
    <columns>Inuse__c</columns>
    <columns>Chas__c</columns>
    <columns>Body__c</columns>
    <columns>Bin_Weighing__c</columns>
    <columns>Food_POC__c</columns>
    <columns>Active__c</columns>
    <columns>Notes__c</columns>
    <columns>Used_Today__c</columns>
    <columns>Hired__c</columns>
    <columns>Garage__c</columns>
    <columns>Issue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Body__c</field>
        <operation>equals</operation>
        <value>,Compactor,Vehicle Cage,Bike Cage</value>
    </filters>
    <label>All</label>
</ListView>